upgraded guava to 33.5.0, netty to 4.2.9, slf4j to 2.0.17, http client to 5.3.1, json path to 2.10.0, freemarker to 2.3.34, common cli to 1.11.0, jackson to 2.21.0, json assert to 1.5.3